<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/image" >

	<TextView
        android:id="@+id/x"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/contactdescription" />
    <Button
	    android:layout_height="wrap_content"
	    android:layout_width="200dp"
	    android:text="Contacts"
	    android:onClick="goToContacts" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_marginTop="0dp"/>
         
    <TextView
        android:id="@+id/y"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/syncshortdescription" /> 	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="200dp"
	    android:text="Sync history"
	    android:onClick="goToSync" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_marginTop="0dp"/>
    
	 <TextView
        android:id="@+id/z"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/persinfodescription" />
 	<Button
	    android:layout_height="wrap_content"
	    android:layout_width="200dp"
	    android:text="Personal settings"
	    android:onClick="goToPersonalInfo" 
	    android:layout_gravity="center_horizontal" 
	    android:layout_marginTop="0dp"/>
</LinearLayout>